# witchnet

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md
benchmark/WitchnetBenchmark.jl/: Manifest.toml  Project.toml
benchmark/WitchnetBenchmark.jl/benchmark/: iris.ipynb  iris.jl
benchmark/WitchnetBenchmark.jl/benchmark/boston_housing/: boston_housing_classify_rad.csv  boston_housing_estimate_medv.csv
benchmark/WitchnetBenchmark.jl/benchmark/iris/: iris_classify_species.csv  iris_estimate_sepallength.csv
benchmark/WitchnetBenchmark.jl/benchmark/penguin/: penguin_classify_species.csv  penguin_estimate_body_mass_g.csv
benchmark/WitchnetBenchmark.jl/benchmark/red_wine/: red_wine_classify_quality.csv  red_wine_estimate_sulphates.csv
benchmark/WitchnetBenchmark.jl/benchmark/star/: star_classify_schtype.csv  star_estimate_math.csv  star_estimate_read.csv
benchmark/WitchnetBenchmark.jl/benchmark/summary/: summary_classification_mean.csv  summary_regression_mean.csv
benchmark/WitchnetBenchmark.jl/benchmark/white_wine/: white_wine_classify_quality.csv  white_wine_estimate_alcohol.csv  white_wine_estimate_density.csv  white_wine_estimate_ph.csv  white_wine_estimate_sulphates.csv
benchmark/WitchnetBenchmark.jl/src/: Utils.jl  WitchnetBenchmark.jl  magds.jl  mlj.jl  models.jl  plots.jl  predeval.jl
benchmark/WitchnetBenchmark.jl/src/benchmarks/: Benchmarks.jl  BostonHousing.jl  Penguin.jl  RedWine.jl  WhiteWine.jl  iris.jl  penguins.jl  star.jl
benchmark/WitchnetBenchmark.jl/test/: Project.toml  runtests.jl
benchmark/datasets/multi/: rdatasets.csv
benchmark/models/: mlj.txt
benchmark/test/: runtests.jl
crates/asa-graphs/: Cargo.toml  README.md
crates/asa-graphs/src/: lib.rs
crates/asa-graphs/src/neural/: element.rs  graph.rs  node.rs  sensor.rs
crates/asa-graphs/src/neural_async/: element.rs  graph.rs  mod.rs  node.rs  sensor.rs
crates/asa-graphs/src/simple/: element.rs  graph.rs  mod.rs  node.rs
crates/flex-points/: Cargo.toml
crates/flex-points/src/: algorithm.rs  approximation.rs  derivative.rs  lib.rs  measures.rs
crates/magds/: Cargo.toml  README.md
crates/magds/data/: iris.csv  iris_original.csv  iris_original_test.csv  iris_original_train.csv  iris_test.csv  iris_train.csv  lists.csv
crates/magds/examples/carscom/: carscom-brand.rs  carscom-price.rs  carscom.rs  star-memtime.rs
crates/magds/examples/carscom/data/: .gitignore  carscom_full_1m_18_08_2022_prepared_test_small.csv  carscom_full_1m_18_08_2022_prepared_train_small.csv  star_test.csv  star_train.csv
crates/magds/src/: lib.rs
crates/magds/src/algorithm/: mod.rs  mutual_information.rs  predict.rs  prediction.rs  recommendation.rs  similarity.rs
crates/magds/src/asynchronous/: ffi.rs  magds.rs  mod.rs  parser.rs  sensor.rs
crates/magds/src/asynchronous/algorithm/: prediction.rs  recommendation.rs  similarity.rs
crates/magds/src/dynamic/: magds.rs  parser.rs  sensor.rs
crates/magds/src/neuron/: mod.rs  simple_neuron.rs  simple_neuron_async.rs
crates/magds/src/simple/: magds.rs  parser.rs  sensor.rs
crates/magds/src/synchronous/: ffi.rs  magds.rs  mod.rs  parser.rs  sensor.rs
crates/magds/src/synchronous/algorithm/: mod.rs  prediction.rs  recommendation.rs  similarity.rs
crates/smagds/: Cargo.toml
crates/smagds/src/: lib.rs
crates/smagds/src/asynchronous/: mod.rs  smagds.rs
crates/witchnet-common/: Cargo.toml
crates/witchnet-common/src/: benchmark.rs  data.rs  distances.rs  lib.rs  neuron.rs  performance.rs  polars.rs  sensor.rs
crates/witchnet-common/src/connection/: mod.rs
crates/witchnet-common/src/connection/collective/: defining.rs  explanatory.rs  inhibitory.rs  mod.rs  sequential.rs  similarity.rs
crates/witchnet-common/src/connection/standalone/: defining.rs  inhibitory.rs  mod.rs  sequential.rs  similarity.rs  universal.rs
crates/witchnet-gui/: Cargo.toml
crates/witchnet-gui/data/: iris_original_very_very_very_very_long_name.csv
crates/witchnet-gui/examples/: cube.rs  panels.rs
crates/witchnet-gui/src/: appearance.rs  components.rs  lib.rs  simulation_3d.rs  utils.rs
crates/witchnet-gui/src/components/: common.rs  magds.rs  mod.rs
crates/witchnet-gui/src/interface/: app.rs  appearance.rs  connections.rs  data.rs  flex_points.rs  layout.rs  magds_2d.rs  magds_3d.rs  mod.rs  neurons.rs  plugin.rs  sensors.rs  sequence_1d.rs  sequential_data.rs  sequential_model_2d.rs  shapes.rs  simulation_2d.rs  simulation_3d.rs  smagds_2d.rs  systems.rs  tabular_data.rs  transform.rs  widgets.rs
crates/witchnet-gui/src/interface/graph/: asa_graph_2d.rs  magds_2d.rs  magds_positions.rs  mod.rs  neuron_2d.rs  positions.rs  sensor_2d.rs  sequential_model_2d.rs  sequential_model_positions.rs
crates/witchnet-gui/src/interface/graph/magds/: magds_2d.rs  magds_positions.rs  mod.rs  neuron_2d.rs  sensor_2d.rs
crates/witchnet-gui/src/interface/graph/smagds/: mod.rs  neuron_2d.rs  sensor_2d.rs  smagds_2d.rs  smagds_positions.rs
crates/witchnet-gui/src/resources/: appearance.rs  args.rs  common.rs  data.rs  layout.rs  magds.rs  mod.rs  sequence_1d.rs  sequential_data.rs  sequential_model.rs  smagds.rs  tabular_data.rs
crates/witchnet-gui/src/ui/: plugin.rs  systems.rs  widgets.rs
crates/witchnet-gui/src/widgets/: mod.rs  shapes.rs
crates/witchnet-gui/src/widgets/plot/: legend.rs  mod.rs  transform.rs
crates/witchnet-gui/src/widgets/plot/items/: bar.rs  box_elem.rs  mod.rs  nodes.rs  rect_elem.rs  rich_text.rs  values.rs
