[workspace]
resolver = "2"

members = [
    "crates/witchnet-common",
    "crates/asa-graphs",
    "crates/magds",
    "crates/witchnet-gui"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.66"
authors = ["Daniel Bulanda <email: daniel@bulanda.net>"]
description = "witchnet is a biologically inspired associative neural network"
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/danbulnet/witchnet"
categories = ["science", "virtualization", "simulation", "database", "data-structures"]
keywords = ["database", "knowledge-graph", "machine-learning", "associative", "graph"]

[profile.release] 
debug = false

[profile.release-lto]
inherits = "release"
debug = false
lto = true

[profile.release-debug]
inherits = "release"
debug = true
lto = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3