[package]
name = "asa-graphs"
version = "0.1.0"
edition.workspace = true
description = "self-balancing, aggregating, and sorting tree-like data structures for efficient data representation"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
categories = ["science", "database", "data-structures"]
keywords = ["data-structure", "algorithm", "associative", "graph"]
default-run = "asa_graphs"

[lib]
name = "asa_graphs"
path = "src/lib.rs"

[[bin]]
name = "asa_graphs"
path = "src/bin/main.rs"

[dependencies]
witchnet-common = { path = "../witchnet-common", version = "0.1.0" }
dyn-clone = "1.0.9"
env_logger = "0.9.0"
log = "0.4.17"
rand = "0.8.5"
anyhow = "1.0.65"

[dev-dependencies]
pretty_assertions = "1.2.1"
env_logger = "0.9.0"