[package]
name = "magds"
version = "0.1.0"
edition.workspace = true
description = "self-organizing graphs that facilitates and significantly accelerates various operations, especially the search for data"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
categories = ["science", "database", "data-structures"]
keywords.workspace = true

[lib]
name = "magds"
path = "src/lib.rs"
crate-type = ["lib", "dylib"]

[[bin]]
name = "magds"
path = "src/bin/main.rs"

[dependencies]
witchnet-common = { path = "../witchnet-common", version = "0.1.0" }
asa-graphs = { path = "../asa-graphs", version = "0.1.0" }
env_logger = "0.9.0"
log = "0.4.17"
polars = { version = "0.24.3", features = [ "zip_with", "csv-file", "temporal", "fmt", "dtype-slim" ] }
enum-as-inner = "0.5.1"
regex = "1.6.0"
test-log = "0.2.11"
anyhow = "1.0.65"
rand = "0.8.5"
dyn-clone = "1.0.9"

[dev-dependencies]
pretty_assertions = "1.2.1"
env_logger = "0.9.0"

[[example]]
name = "carscom-price"
path = "examples/carscom/carscom-price.rs"

[[example]]
name = "carscom-brand"
path = "examples/carscom/carscom-brand.rs"