[package]
name = "witchnet-common"
version.workspace = true
edition.workspace = true
description = "a collection of traits, functions, consts and structures for associative structures related to the witchnet project"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
dyn-clone = "1.0.9"
num-traits = "0.2.15"
polars = { version = "0.23.2", features = [ "zip_with", "csv-file", "temporal", "fmt", "dtype-slim" ] }
enum-as-inner = "0.5.1"

[dev-dependencies]
pretty_assertions = "1.2.1"