[package]
name = "witchnet-gui"
version = "0.1.0"
edition.workspace = true
description = "gui for network simulation and manipulation"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords = ["gui", "visualization", "simulation", "associative", "graph"]
default-run = "witchnet_gui"

[lib]
name = "witchnet_gui"
path = "src/lib.rs"

[[bin]]
name = "witchnet_gui"
path = "src/bin/main.rs"

[dependencies]
bevy = "0.8.1"
bevy_egui = "0.16.1"
egui = "0.19.0"
once_cell = "1.15.0"
