[package]
name = "witchnet-gui"
version = "0.1.0"
edition.workspace = true
description = "gui for network simulation and manipulation"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords = ["gui", "visualization", "simulation", "associative", "graph"]
default-run = "witchnet-gui"

[lib]
name = "witchnet_gui"
path = "src/lib.rs"

[[bin]]
name = "witchnet-gui"
path = "src/bin/main.rs"

[dependencies]
witchnet-common = { path = "../witchnet-common", version = "0.1.0" }
magds = { path = "../magds", version = "0.1.0" }
# bevy = "0.8.1"
bevy = { version = "0.8", default-features = true, features = ["bevy_render", "bevy_core_pipeline", "bevy_asset"] }
egui = { version = "0.19.0", default-features = true, features = ["bytemuck"] }
bevy_egui = "0.16.1"
once_cell = "1.15.0"
rfd = "0.10.0"
polars = { version = "0.24.3", features = [ "zip_with", "csv-file", "temporal", "fmt", "dtype-slim" ] }